[package]
name = "eggsec"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Scope-enforced Rust security assessment engine for defense validation and regression testing"
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "../../README.md"
keywords = ["security", "defense-validation", "waf", "scanner", "testing"]
categories = ["command-line-utilities", "development-tools::testing"]

exclude = [
    "eggsec",
    "target/**",
    ".git/**",
    "*.pcap",
    "*.pcapng",
    "proptest-regressions/**",
    "waf_bypasses.json",
    "wordlists/**",
    "exports/**",
    "**/AGENTS.override.md",
    "tests/**",
]

[dependencies]
tokio = { workspace = true }
tokio-util = "0.7"
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
webpki-roots = "0.26"
pem = "3"
reqwest = { version = "0.13", features = ["json", "rustls", "socks", "http2", "form", "query", "blocking", "cookies"], default-features = false }
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
serde = { workspace = true }
serde_json.workspace = true
serde_yaml_neo = "0.11"
toml = "0.8"
anyhow.workspace = true
thiserror.workspace = true
hdrhistogram = "7"
bytes = "1"
indicatif = "0.17"
futures = "0.3"
async-channel = "2"
async-stream = { version = "0.3", optional = true }
parking_lot.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
aho-corasick = "1"
flate2.workspace = true
rand.workspace = true
url.workspace = true
urlencoding.workspace = true
regex.workspace = true
uuid = { version = "1", features = ["v4", "serde"] }
base64.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
notify = { version = "7", features = ["serde"] }
notify-debouncer-mini = "0.5"
directories = "5"
quick-xml = { version = "0.31", features = ["serialize"] }
ipnetwork = "0.20"
hickory-resolver.workspace = true
hostname.workspace = true
sha2 = "0.10"
md-5.workspace = true
hmac = "0.12"
hex.workspace = true
rustc-hash = { workspace = true }
subtle = "2"
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls", "smtp-transport", "tracing", "rustls-no-provider", "webpki-roots", "builder"] }
crossbeam = "0.8"
dashmap.workspace = true
scraper.workspace = true
lru = "0.18"
semver = { version = "1", optional = true }
rustls-pki-types = "1"
maxminddb = "0.27"
shellexpand = "3"
rcgen = { version = "0.14", features = ["pem"] }
async-trait.workspace = true
zeroize = { version = "1", features = ["derive"] }
strum = { version = "0.26", default-features = false, features = ["derive"] }
smallvec = "1"
ed25519-dalek = "2"

# Workspace crates
eggsec-core = { path = "../eggsec-core" }
eggsec-output = { path = "../eggsec-output" }
eggsec-tool-core = { path = "../eggsec-tool-core" }
eggsec-agent = { path = "../eggsec-agent" }
# NSE remains optional compatibility support for Nmap NSE scripts.
# Python/Ruby arbitrary plugin runtimes were intentionally removed.
eggsec-nse = { path = "../eggsec-nse", optional = true }
ssh2 = { version = "0.9", optional = true }

[dependencies.libc]
version = "0.2"
optional = true

[dependencies.pnet]
version = "0.35"
optional = true

[dependencies.pnet_packet]
version = "0.35"
optional = true

[dependencies.socket2]
version = "0.5"
features = ["all"]
optional = true

[dependencies.nix]
version = "0.29"
features = ["net", "socket"]
optional = true

[dependencies.surge-ping]
version = "0.8"
optional = true

[dependencies.axum]
version = "0.8"
optional = true

[dependencies.eventsource-stream]
version = "0.2"
optional = true

[dependencies.tower]
version = "0.4"
optional = true

[dependencies.tower-http]
version = "0.6"
optional = true
features = ["cors", "trace", "compression-br"]

[dependencies.tokio-tungstenite]
version = "0.26"
features = ["rustls-tls-webpki-roots"]
optional = true

[dependencies.tonic]
version = "0.14"
optional = true

[dependencies.prost]
version = "0.14"
optional = true

[dependencies.prost-types]
version = "0.14"
optional = true

[dependencies.tonic-prost]
version = "0.14"
optional = true

[dependencies.tonic-reflection]
version = "0.14"
optional = true

[dependencies.tokio-stream]
version = "0.1"
optional = true

[dependencies.headless_chrome]
version = "1"
optional = true

[dependencies.sqlx]
version = "0.8"
optional = true
features = ["runtime-tokio", "postgres", "mysql", "macros", "chrono"]

[dependencies.kube]
version = "0.92"
optional = true
features = ["client", "runtime"]

[dependencies.k8s-openapi]
version = "0.22"
optional = true
features = ["v1_30"]

[dependencies.printpdf]
version = "0.7"
optional = true

# tiberius (pure-Rust TDS for MSSQL) is prepared behind the marker feature `db-pentest-mssql-tiberius`.
# The marker is declared in [features]. When both `db-pentest` and the marker are enabled,
# the real client code in db_pentest/mssql.rs is compiled (this block is activated).
# Until the marker is used, mssql targets fall back to rich synthetic dry-run population.
# Activate real driver with:
#   cargo ... --features db-pentest,db-pentest-mssql-tiberius
[dependencies.tiberius]
version = "0.12"
optional = true
default-features = false
features = ["tokio", "rustls"]

# MongoDB async driver for db-pentest Phase 5 (marker feature `db-pentest-mongodb`).
# When enabled together with db-pentest, the real MongoDB client path is compiled in mongodb.rs.
# Dry-run + categories + bridge are always exercised (synthetic) regardless of the marker.
[dependencies.mongodb]
version = "2.8"
optional = true
default-features = false
features = ["tokio-runtime"]

[dependencies.bson]
version = "2.9"
optional = true

# Redis async client for db-pentest Phase 5 (marker feature `db-pentest-redis`).
# When enabled together with db-pentest, the real Redis client path is compiled in redis.rs.
[dependencies.redis]
version = "0.25"
optional = true
features = ["tokio-comp", "connection-manager"]

[dependencies.cyclonedx-bom]
version = "0.8"
optional = true

[dependencies.spdx]
version = "0.10"
optional = true

[dependencies.walkdir]
version = "2"
optional = true

[dependencies.zip]
version = "2"
optional = true

[dependencies.plist]
version = "1.7"
features = ["serde"]
optional = true

[build-dependencies.prost-build]
version = "0.14"
optional = true

[features]
default = []

# Tool abstraction layer (always enabled - no extra deps)
tool-api = []

# Enable insecure TLS (bypasses certificate verification - USE ONLY FOR TESTING)
# WARNING: This feature introduces security vulnerabilities. Never use in production.
insecure-tls = []

# REST API server with MCP (Model Context Protocol) for AI agent integration
rest-api = ["tool-api", "axum", "tower", "tower-http", "async-stream"]

# WebSocket API server support
ws-api = ["axum/ws"]

# gRPC API server for external tool integration
grpc-api = ["tool-api", "tonic", "prost", "prost-types", "tonic-prost", "tonic-reflection", "prost-build", "dep:tonic-prost-build", "async-stream", "tokio-stream"]

# Low-level network stress testing
stress-testing = ["pnet", "pnet_packet", "socket2", "nix", "libc", "surge-ping", "eggsec-nse?/stress-testing"]

# Packet inspection (live capture, hexdump, header parsing, traceroute)
packet-inspection = ["pnet", "pnet_packet", "libc"]

# NSE (Nmap Scripting Engine) support - run Lua NSE scripts
nse = ["tool-api", "dep:eggsec-nse", "eggsec-nse/nse"]

# NSE with full SSH2/libssh2-backed support
nse-ssh2 = ["nse", "eggsec-nse/nse-ssh2", "dep:ssh2"]

# NSE sandbox - restrict dangerous Lua operations
nse-sandbox = ["nse", "eggsec-nse/sandbox"]

# Advanced threat hunting techniques
advanced-hunting = []

# Compliance scanning and reporting
compliance = []

# External integrations (Jira, GitHub, GitLab, etc.)
external-integrations = []

# Finding workflow management
finding-workflow = []

# Vulnerability management and triage
vuln-management = []

# Full build with all features
  full = ["stress-testing", "packet-inspection", "rest-api", "nse", "ai-integration", "websocket", "headless-browser", "database", "container", "sbom", "advanced-hunting", "compliance", "external-integrations", "finding-workflow", "vuln-management", "wireless", "wireless-advanced", "mobile", "mobile-dynamic", "db-pentest"]

# AI integration for analysis, payload generation, WAF bypass suggestions
ai-integration = ["tool-api", "eventsource-stream", "semver"]

# WebSocket security testing with real connections
websocket = ["tokio-tungstenite"]

# Headless browser testing for DOM XSS and SPA crawling
headless-browser = ["headless_chrome"]

# Database storage for findings and scan history
database = ["sqlx"]

# Database pentesting loadout (direct Postgres/MySQL/MSSQL checks for authorized lab/defense use only).
# Standalone defense-lab surface (TUI + pipeline profile opt-in under feature in Phase 3; MCP absent by default).
# Heavily gated by policy + --allow-db-pentest + --allow-db-pentest-advanced (narrow) + dry-run support.
# Phase 1: foundations, Postgres primary + MySQL secondary, manifest, safety, CLI, bridge.
# Phase 2: real MSSQL (tiberius behind marker `db-pentest-mssql-tiberius`), docker lab, --real smoke, combined web+db example, qcount cleanup, full parity.
# Phase 3: TUI tab (Tab::DbPentest), ScanProfile::DbRegression, gated advanced checks (reversible test vectors), correlation notes, evidence bundle stub.
# The marker is a no-op feature declaration. Enabling it + `db-pentest` activates the tiberius path in mssql.rs.
# Dry-run + categories + bridge for mssql are always exercised (synthetic) regardless of the marker, so tests/CI
# stay green without forcing heavy transitive deps in every environment.
db-pentest = ["sqlx"]
# Enabling this marker (together with db-pentest) pulls tiberius and activates the real MSSQL client path.
# Use: cargo ... --features db-pentest,db-pentest-mssql-tiberius
db-pentest-mssql-tiberius = ["dep:tiberius"]
# Enabling this marker (together with db-pentest) pulls the mongodb crate and activates the real MongoDB client path.
# Use: cargo ... --features db-pentest,db-pentest-mongodb
db-pentest-mongodb = ["dep:mongodb", "dep:bson"]
# Enabling this marker (together with db-pentest) pulls the redis crate and activates the real Redis client path.
# Use: cargo ... --features db-pentest,db-pentest-redis
db-pentest-redis = ["dep:redis"]
# Optional MCP/agent exposure for db-pentest. When enabled, registers db-pentest as an MCP tool.
# Default behavior (without this marker) keeps db-pentest as standalone defense-lab surface only.
# Real runs via MCP require EnforcementContext + policy confirmation.
db-pentest-mcp = ["db-pentest"]

# Kubernetes container security scanning
container = ["kube", "k8s-openapi"]

# Cloud security scanning (AWS, GCP, Azure)
cloud = []

# SBOM generation and vulnerability checking
sbom = ["cyclonedx-bom", "spdx", "walkdir"]

# Git secrets scanning
git-secrets = []

# PDF report generation
pdf = ["printpdf"]

# Wireless security testing (WiFi scanning (passive reconnaissance and basic security analysis))
wireless = []

# Active wireless attack primitives (deauth, handshake capture, etc.) for lab-only defense validation
wireless-advanced = ["wireless"]

  # Mobile app security static analysis (APK/IPA manifest & config checks for lab/defense use)
  mobile = ["zip", "plist"]

  # Mobile dynamic/runtime testing (Android ADB + logcat analysis + Frida instrumentation for lab/defense use only).
  # Depends on base mobile static. Standalone defense-lab surface; heavily gated.
  # Phase 1: device discovery, controlled install/launch/uninstall, runtime log capture + high-signal findings.
  # Phase 2 (closed 2026-06-12): proxy Level-1 + traffic summary + runtime permission testing + correlation.
  # All Phase 1 and Phase 2 dynamic mobile functionality is kept under this single mobile-dynamic feature
  # (no mobile-dynamic-advanced sub-feature split, per 2026-06-12 closeout decision).
  # Phase 3 (Frida/runtime instrumentation) is included under mobile-dynamic (per phase3-frida-expansion-plan.md
  # Key Decision: no separate mobile-frida sub-feature). Governed by runtime --allow-frida flag + EnforcementContext
  # policy gates (Intrusive tier for real ops). Dry-run always safe. Standalone defense-lab only; no MCP/agent exposure.
  # Prefer frida CLI fallback for Phase 3a (no heavy crate dep in this pass).
  mobile-dynamic = ["mobile"]

# OpenAPI schema ingestion and fuzz target generation
api-schema = []

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
criterion = "0.5"
proptest = "1"

[build-dependencies.tonic-prost-build]
version = "0.14"
optional = true
