[package]
name = "slapper-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "CLI binary for Slapper security testing toolkit"

[dependencies]
slapper = { path = "../slapper" }
slapper-tui = { path = "../slapper-tui" }

tokio = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
shellexpand = "3"

[features]
default = []
nse = ["slapper/nse", "slapper-tui/nse"]
headless-browser = ["slapper/headless-browser", "slapper-tui/headless-browser"]
compliance = ["slapper/compliance", "slapper-tui/compliance"]
database = ["slapper/database", "slapper-tui/database"]
external-integrations = ["slapper/external-integrations", "slapper-tui/external-integrations"]
finding-workflow = ["slapper/finding-workflow", "slapper-tui/finding-workflow"]
vuln-management = ["slapper/vuln-management", "slapper-tui/vuln-management"]
wireless = ["slapper/wireless", "slapper-tui/wireless"]
stress-testing = ["slapper/stress-testing", "slapper-tui/stress-testing"]
packet-inspection = ["slapper/packet-inspection", "slapper-tui/packet-inspection"]
advanced-hunting = ["slapper/advanced-hunting", "slapper-tui/advanced-hunting"]
tool-api = ["slapper/tool-api", "slapper-tui/tool-api"]
rest-api = ["slapper/rest-api", "slapper-tui/rest-api"]
ai-integration = ["slapper/ai-integration"]
websocket = ["slapper/websocket"]
grpc-api = ["slapper/grpc-api"]
ws-api = ["slapper/ws-api"]
container = ["slapper/container"]
sbom = ["slapper/sbom"]
cloud = ["slapper/cloud"]
git-secrets = ["slapper/git-secrets"]
pdf = ["slapper/pdf"]
api-schema = ["slapper/api-schema"]
insecure-tls = ["slapper/insecure-tls"]
full = [
    "slapper/full",
    "slapper-tui/full",
]
