[package]
name = "slapper-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core domain types, errors, constants, and scope enforcement for Slapper"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
subtle = "2"
zeroize = { version = "1", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
ipnetwork = "0.20"
rustc-hash = { workspace = true }
toml = "0.8"
serde_yaml_neo = "0.11"
