[package]
name = "slapper-nse"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Nmap Scripting Engine support for Slapper"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "fs", "net", "io-util"] }
parking_lot = "0.12"
tracing = "0.1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.8", features = ["small_rng"] }
once_cell = "1"
regex = "1"
base64 = "0.22"
flate2 = "1"
url = "2"
urlencoding = "2.1"
hex = "0.4"
md-5 = "0.10"
hostname = "0.4"
dashmap = "6"
hickory-resolver = "0.24"
reqwest = { version = "0.13", features = ["json", "blocking", "rustls"], default-features = false }
native-tls = "0.2.18"
scraper = "0.21"
mlua = { version = "0.11", features = ["async"], optional = true }
mlua-luau-scheduler = { version = "0.2", optional = true }
openssl = { version = "0.10", features = ["vendored"], optional = true }
des = { version = "0.8", optional = true }
ssh2 = { version = "0.9", optional = true }

[features]
default = []
nse = ["mlua", "mlua-luau-scheduler", "openssl", "des", "ssh2"]
stress-testing = []
