[package]
name = "slapper-nse"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Nmap Scripting Engine support for Slapper"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
parking_lot.workspace = true
tracing.workspace = true
async-trait.workspace = true
chrono.workspace = true
rand.workspace = true
regex.workspace = true
base64.workspace = true
flate2.workspace = true
url.workspace = true
urlencoding.workspace = true
hex.workspace = true
md-5.workspace = true
hostname.workspace = true
dashmap.workspace = true
hickory-resolver.workspace = true
reqwest = { version = "0.13", features = ["json", "blocking", "rustls"], default-features = false }
native-tls = "0.2.18"
scraper.workspace = true
mlua = { version = "0.11.6", features = ["async"], optional = true }
mlua-luau-scheduler = { version = "0.2", optional = true }
openssl = { version = "0.10", features = ["vendored"], optional = true }
des = { version = "0.8", optional = true }
ssh2 = { version = "0.9", optional = true }
ipnetwork = "0.20"

[features]
default = []
nse = ["mlua", "mlua-luau-scheduler", "openssl", "des"]
nse-ssh2 = ["nse", "dep:ssh2"]
sandbox = []
stress-testing = []
