[package]
name = "slapper-plugin"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Python plugin support for Slapper security testing toolkit"

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
dirs = { version = "5", optional = true }
pyo3 = { version = "0.28", features = ["auto-initialize"], optional = true }
magnus = { version = "0.8.2", optional = true }
regex = { version = "1", optional = true }
futures = "0.3"

[dev-dependencies]
futures = "0.3"

[features]
default = []
python-plugins = ["dep:pyo3", "dep:dirs", "dep:regex"]
ruby-plugins = ["dep:magnus"]
