[package]
name = "slapper-ruby"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Ruby/Metasploit integration for Slapper"

[dependencies]
magnus = { version = "0.8", features = ["embed"], optional = true }
reqwest = { version = "0.13", features = ["json", "rustls", "socks", "http2"], default-features = false }
tokio = { workspace = true }
base64.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
chrono.workspace = true
async-trait.workspace = true
slapper-plugin = { path = "../slapper-plugin" }

[features]
default = []
ruby-plugins = ["dep:magnus"]
