[package]
name = "slapper"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "High-performance security testing toolkit for penetration testers and security researchers"
authors = ["Slapper Team"]
homepage = "https://github.com/slapper-tool/slapper"
documentation = "https://github.com/slapper-tool/slapper#readme"
readme = "../../README.md"
keywords = ["security", "pentesting", "load-testing", "waf", "fuzzer", "vulnerability-scanner"]
categories = ["command-line-utilities", "development-tools::testing"]

exclude = [
    "slapper",
    "target/**",
    ".git/**",
    "*.pcap",
    "*.pcapng",
]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "time", "macros", "fs", "process", "io-util", "io-std", "signal", "test-util"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
reqwest = { version = "0.13", features = ["json", "rustls", "socks", "http2", "form", "query", "blocking"], default-features = false }
ratatui = "0.30"
crossterm = "0.28"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
anyhow = "1"
thiserror = "2"
hdrhistogram = "7"
indicatif = "0.17"
futures = "0.3"
async-channel = "2"
async-stream = { version = "0.3", optional = true }
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
aho-corasick = "1"
flate2 = "1"
rand = { version = "0.8", features = ["small_rng"] }
url = "2"
regex = "1"
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.22"
urlencoding = "2.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
directories = "5"
quick-xml = { version = "0.31", features = ["serialize"] }
ipnetwork = "0.20"
hickory-resolver = "0.24"
hostname = "0.4"
sha2 = "0.10"
md-5 = "0.10"
hmac = "0.12"
hex = "0.4"
subtle = "2"
crossbeam = "0.8"
dashmap = "6"
scraper = "0.21"
rustls-pki-types = "1"
maxminddb = "0.27"
shellexpand = "3"
rcgen = { version = "0.14", features = ["pem"] }
async-trait = "0.1"
zeroize = { version = "1", features = ["derive"] }
strum = { version = "0.26", default-features = false, features = ["derive"] }

# Workspace crates
slapper-plugin = { path = "../slapper-plugin", optional = true }
slapper-nse = { path = "../slapper-nse", optional = true }
slapper-ruby = { path = "../slapper-ruby", optional = true }

[dependencies.libc]
version = "0.2"
optional = true

[dependencies.pnet]
version = "0.35"
optional = true

[dependencies.pnet_packet]
version = "0.35"
optional = true

[dependencies.socket2]
version = "0.5"
features = ["all"]
optional = true

[dependencies.nix]
version = "0.29"
features = ["net", "socket"]
optional = true

[dependencies.surge-ping]
version = "0.8"
optional = true

[dependencies.axum]
version = "0.7"
optional = true

[dependencies.eventsource-stream]
version = "0.2"
optional = true

[dependencies.tower]
version = "0.4"
optional = true

[dependencies.tokio-tungstenite]
version = "0.26"
features = ["rustls-tls-webpki-roots"]
optional = true

[dependencies.tonic]
version = "0.12"
optional = true

[dependencies.prost]
version = "0.13"
optional = true

[build-dependencies.prost-build]
version = "0.13"
optional = true

[features]
default = []

# Tool abstraction layer (always enabled - no extra deps)
tool-api = []

# REST API server with MCP (Model Context Protocol) for AI agent integration
rest-api = ["tool-api", "axum", "tower", "async-stream"]

# gRPC API server for external tool integration
grpc-api = ["tool-api", "tonic", "prost", "prost-build"]

# Python plugin support
python-plugins = ["dep:slapper-plugin", "slapper-plugin/python-plugins"]

# Ruby plugin support with Metasploit RPC integration
ruby-plugins = ["dep:slapper-plugin", "slapper-plugin/ruby-plugins", "dep:slapper-ruby", "slapper-ruby/ruby-plugins"]

# Low-level network stress testing
stress-testing = ["pnet", "pnet_packet", "socket2", "nix", "libc", "surge-ping", "slapper-nse?/stress-testing"]

# Packet inspection (live capture, hexdump, header parsing, traceroute)
packet-inspection = ["pnet", "pnet_packet", "libc"]

# All plugin languages
all-plugins = ["python-plugins", "ruby-plugins"]

# NSE (Nmap Scripting Engine) support - run Lua NSE scripts
nse = ["tool-api", "dep:slapper-nse", "slapper-nse/nse"]

# NSE sandbox - restrict dangerous Lua operations
nse-sandbox = ["nse", "slapper-nse/sandbox"]

# Full build with all features
full = ["python-plugins", "ruby-plugins", "stress-testing", "packet-inspection", "rest-api", "nse", "ai-integration"]

# AI integration for analysis, payload generation, WAF bypass suggestions
ai-integration = ["tool-api", "eventsource-stream"]

# WebSocket security testing with real connections
websocket = ["tokio-tungstenite"]

[[bin]]
name = "slapper"
path = "src/main.rs"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
criterion = "0.5"
proptest = "1"
