[package]
name = "slapper"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "High-performance security testing toolkit for penetration testers and security researchers"
authors = ["Slapper Team"]
homepage = "https://github.com/slapper-tool/slapper"
documentation = "https://github.com/slapper-tool/slapper#readme"
readme = "../../README.md"
keywords = ["security", "pentesting", "load-testing", "waf", "fuzzer", "vulnerability-scanner"]
categories = ["command-line-utilities", "development-tools::testing"]

exclude = [
    "slapper",
    "target/**",
    ".git/**",
    "*.pcap",
    "*.pcapng",
]

[dependencies]
tokio = { workspace = true }
tokio-util = "0.7"
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
pem = "3"
reqwest = { version = "0.13", features = ["json", "rustls", "socks", "http2", "form", "query", "blocking"], default-features = false }
ratatui = "0.30"
crossterm = "0.29"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
serde = { workspace = true }
serde_json.workspace = true
serde_yaml_neo = "0.11"
toml = "0.8"
anyhow.workspace = true
thiserror.workspace = true
unicode-normalization = "0.1"
hdrhistogram = "7"
indicatif = "0.17"
futures = "0.3"
async-channel = "2"
async-stream = { version = "0.3", optional = true }
parking_lot.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
aho-corasick = "1"
flate2.workspace = true
rand.workspace = true
url.workspace = true
urlencoding.workspace = true
regex.workspace = true
uuid = { version = "1", features = ["v4", "serde"] }
base64.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
directories = "5"
quick-xml = { version = "0.31", features = ["serialize"] }
ipnetwork = "0.20"
hickory-resolver.workspace = true
hostname.workspace = true
sha2 = "0.10"
md-5.workspace = true
hmac = "0.12"
hex.workspace = true
rustc-hash = { workspace = true }
subtle = "2"
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls", "smtp-transport", "tracing", "rustls-no-provider", "webpki-roots", "builder"] }
crossbeam = "0.8"
dashmap.workspace = true
scraper.workspace = true
rustls-pki-types = "1"
maxminddb = "0.27"
shellexpand = "3"
rcgen = { version = "0.14", features = ["pem"] }
async-trait.workspace = true
zeroize = { version = "1", features = ["derive"] }
strum = { version = "0.26", default-features = false, features = ["derive"] }
smallvec = "1"
ed25519-dalek = "2"
handlebars = "6"
arboard = "3.4"

# Workspace crates
slapper-plugin = { path = "../slapper-plugin", optional = true }
slapper-nse = { path = "../slapper-nse", optional = true }
slapper-ruby = { path = "../slapper-ruby", optional = true }

[dependencies.libc]
version = "0.2"
optional = true

[dependencies.pnet]
version = "0.35"
optional = true

[dependencies.pnet_packet]
version = "0.35"
optional = true

[dependencies.socket2]
version = "0.5"
features = ["all"]
optional = true

[dependencies.nix]
version = "0.29"
features = ["net", "socket"]
optional = true

[dependencies.surge-ping]
version = "0.8"
optional = true

[dependencies.axum]
version = "0.8"
optional = true

[dependencies.eventsource-stream]
version = "0.2"
optional = true

[dependencies.tower]
version = "0.4"
optional = true

[dependencies.tower-http]
version = "0.6"
optional = true
features = ["cors", "trace", "compression-br"]

[dependencies.tokio-tungstenite]
version = "0.26"
features = ["rustls-tls-webpki-roots"]
optional = true

[dependencies.tonic]
version = "0.14"
optional = true

[dependencies.prost]
version = "0.14"
optional = true

[dependencies.prost-types]
version = "0.14"
optional = true

[dependencies.tonic-prost]
version = "0.14"
optional = true

[dependencies.tonic-reflection]
version = "0.14"
optional = true

[dependencies.headless_chrome]
version = "1"
optional = true

[dependencies.sqlx]
version = "0.8"
optional = true
features = ["runtime-tokio", "postgres", "macros"]

[dependencies.kube]
version = "0.92"
optional = true
features = ["client", "runtime"]

[dependencies.k8s-openapi]
version = "0.22"
optional = true

[dependencies.printpdf]
version = "0.7"
optional = true

[dependencies.openapiv3]
version = "2"
optional = true

[dependencies.cyclonedx-bom]
version = "0.8"
optional = true

[dependencies.spdx]
version = "0.10"
optional = true

[build-dependencies.prost-build]
version = "0.14"
optional = true

[features]
default = []

# Tool abstraction layer (always enabled - no extra deps)
tool-api = []

# Enable insecure TLS (bypasses certificate verification - USE ONLY FOR TESTING)
# WARNING: This feature introduces security vulnerabilities. Never use in production.
insecure-tls = []

# REST API server with MCP (Model Context Protocol) for AI agent integration
rest-api = ["tool-api", "axum", "tower", "tower-http", "async-stream"]

# WebSocket API server support
ws-api = ["axum/ws"]

# gRPC API server for external tool integration
grpc-api = ["tool-api", "tonic", "prost", "prost-types", "tonic-prost", "tonic-reflection", "prost-build", "dep:tonic-prost-build"]

# Python plugin support
python-plugins = ["dep:slapper-plugin", "slapper-plugin/python-plugins"]

# Ruby plugin support with Metasploit RPC integration
ruby-plugins = ["dep:slapper-plugin", "slapper-plugin/ruby-plugins", "dep:slapper-ruby", "slapper-ruby/ruby-plugins"]

# Low-level network stress testing
stress-testing = ["pnet", "pnet_packet", "socket2", "nix", "libc", "surge-ping", "slapper-nse?/stress-testing"]

# Packet inspection (live capture, hexdump, header parsing, traceroute)
packet-inspection = ["pnet", "pnet_packet", "libc"]

# All plugin languages
all-plugins = ["python-plugins", "ruby-plugins"]

# NSE (Nmap Scripting Engine) support - run Lua NSE scripts
nse = ["tool-api", "dep:slapper-nse", "slapper-nse/nse"]

# NSE sandbox - restrict dangerous Lua operations
nse-sandbox = ["nse", "slapper-nse/sandbox"]

# Advanced threat hunting techniques
advanced-hunting = []

# Compliance scanning and reporting
compliance = []

# External integrations (Jira, GitHub, GitLab, etc.)
external-integrations = []

# Finding workflow management
finding-workflow = []

# Vulnerability management and triage
vuln-management = []

# Full build with all features
full = ["python-plugins", "ruby-plugins", "stress-testing", "packet-inspection", "rest-api", "nse", "ai-integration", "websocket", "headless-browser", "database", "container", "sbom", "advanced-hunting", "compliance", "external-integrations", "finding-workflow", "vuln-management", "wireless"]

# AI integration for analysis, payload generation, WAF bypass suggestions
ai-integration = ["tool-api", "eventsource-stream"]

# WebSocket security testing with real connections
websocket = ["tokio-tungstenite"]

# Headless browser testing for DOM XSS and SPA crawling
headless-browser = ["headless_chrome"]

# Database storage for findings and scan history
database = ["sqlx"]

# Kubernetes container security scanning
container = ["kube", "k8s-openapi"]

# Cloud security scanning (AWS, GCP, Azure)
cloud = []

# API schema-based fuzzing
api-schema = ["openapiv3"]

# SBOM generation and vulnerability checking
sbom = ["cyclonedx-bom", "spdx"]

# Git secrets scanning
git-secrets = []

# PDF report generation
pdf = ["printpdf"]

# Wireless security testing (WiFi scanning, authentication testing)
wireless = []

[[bin]]
name = "slapper"
path = "src/main.rs"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
criterion = "0.5"
proptest = "1"

[build-dependencies.tonic-prost-build]
version = "0.14"
optional = true
